corrected the alignment

--- a/Survey_Forms/survey_form1.css
+++ b/Survey_Forms/survey_form1.css
@@ -30,14 +30,12 @@ header {
   padding-bottom: 10px;
 }
 
-label {
-  /* display: flex; */
+#name-label, #email-label, #age-label{
   padding-top: 20px;
   margin-left: 50px;
-
 }
 
-.personal, select {
+.personal, select, textarea {
   width: 600px;
   height: 30px;
   border-radius: 0.25rem;
@@ -47,5 +45,8 @@ label {
 }
 
 p {
+  padding-left: 50px;
+}
+.checkbox-container {
   padding-left: 50px;
 }
